[metadata]
name = django-sworker-linkedin
version = 0.1.3
description = A Django app to manage sworker of linkedin's.
long_description = file: README.rst
url = https://github.com/piraidev/django-on-demand
author = Anubhav K.
author_email = me@k4anubhav.com
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3 :: Only

[options]
include_package_data = true
packages = find:
